[package]
name = "internal-minimal-versions"
version = "0.1.0"
edition = "2021"
publish = false

# these dependencies don't build if installed with `cargo +nightly update -Z
# minimal-versions` so we add them here to make sure we get a version that
# does build
#
# this only matters for axum's CI
[dependencies]
crc32fast = "1.3.2"
gcc = "0.3.55"
time = "0.3.9"
tungstenite = "0.17.2"
