[package]
name = "example-async-graphql"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
axum = { path = "../../axum" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
async-graphql = "2.9.9"
slab = "0.4.3"
