[package]
name = "example-chat"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
axum = { path = "../..", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
