[package]
name = "example-diesel-async-postgres"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { path = "../../axum", features = ["macros"] }
diesel = "~2.3"
diesel-async = { version = "0.7", features = ["postgres", "bb8", "migrations"] }
diesel_migrations = "~2.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
